* Fixing problems in the initialization process