@@ -303,6 +303,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 	 	       	<artifactId>maven-surefire-plugin</artifactId>
 	 	    	<version>2.13</version>
+				<configuration>
+					<argLine>-Xmx1524m -XX:MaxPermSize=256m</argLine>
+				</configuration>
       		</plugin>
 
 			<!-- Generate javadoc for the project -->
